# internal/web/stream/stream.go
@@ -1,4 +1,4 @@
-package web
+package stream
 
 import (
 	"errors"
@@ -12,6 +12,7 @@ import (
 	"github.com/amirdaaee/TGMon/internal/log"
 	"github.com/amirdaaee/TGMon/internal/stream"
 	"github.com/amirdaaee/TGMon/internal/types"
+	wtypes "github.com/amirdaaee/TGMon/internal/web/types"
 	"github.com/chenmingyong0423/go-mongox/v2/builder/query"
 	"github.com/gin-gonic/gin"
 	range_parser "github.com/quantumsheep/range-parser"
@@ -25,11 +26,13 @@ type Streamhandler struct {
 	streamPool  stream.IWorkerPool
 }
 
+var _ wtypes.Registereable = (*Streamhandler)(nil)
+
 func (s *Streamhandler) Stream(g *gin.Context) {
 	r := g.Request
 	var req StreamReq
 	if err := g.ShouldBindUri(&req); err != nil {
-		g.Error(NewHttpError(err, http.StatusBadRequest)) //nolint:golint,errcheck
+		g.Error(wtypes.NewHttpError(err, http.StatusBadRequest)) //nolint:golint,errcheck
 		return
 	}
 	media, err := s.getMedia(g, req.ID)
@@ -39,7 +42,7 @@ func (s *Streamhandler) Stream(g *gin.Context) {
 	}
 	meta, err := s.getStreamMetaData(r, *media)
 	if err != nil {
-		g.Error(NewHttpError(err, http.StatusInternalServerError)) //nolint:golint,errcheck
+		g.Error(wtypes.NewHttpError(err, http.StatusInternalServerError)) //nolint:golint,errcheck
 		return
 	}
 	status, headers := s.getStreamHeaders(r, meta, g.Query("d") == "true")
@@ -52,7 +55,7 @@ func (s *Streamhandler) Stream(g *gin.Context) {
 	}
 	streamer, err := stream.NewStreamer(g.Request.Context(), s.streamPool, media.MessageID, meta.Start, meta.End)
 	if err != nil {
-		g.Error(NewHttpError(err, http.StatusInternalServerError)) //nolint:golint,errcheck
+		g.Error(wtypes.NewHttpError(err, http.StatusInternalServerError)) //nolint:golint,errcheck
 		return
 	}
 	defer runtime.GC()
@@ -61,20 +64,27 @@ func (s *Streamhandler) Stream(g *gin.Context) {
 	delete(headers, "Content-Type")
 	g.DataFromReader(status, meta.ContentLength, meta.MimeType, streamer.ReadBuffered(), headers)
 }
+func (s *Streamhandler) RegisterRoutes(r *gin.RouterGroup, authMiddleware gin.HandlerFunc) error {
+	r.Match([]string{"HEAD", "GET"}, "/stream/:mediaID", s.Stream)
+	return nil
+}
+func (s *Streamhandler) RegisterToRoot() bool {
+	return true
+}
 func (s *Streamhandler) getMedia(g *gin.Context, id string) (*types.MediaFileDoc, error) {
 	if id == "" {
-		return nil, NewHttpError(errors.New("mediaID is required"), http.StatusBadRequest)
+		return nil, wtypes.NewHttpError(errors.New("mediaID is required"), http.StatusBadRequest)
 	}
 	idObj, err := bson.ObjectIDFromHex(id)
 	if err != nil {
-		return nil, NewHttpError(fmt.Errorf("error parsing mediaID: %w", err), http.StatusBadRequest)
+		return nil, wtypes.NewHttpError(fmt.Errorf("error parsing mediaID: %w", err), http.StatusBadRequest)
 	}
 	media, err := s.mediaFacade.GetCollection().Finder().Filter(query.Id(idObj)).Find(g.Request.Context())
 	if err != nil {
-		return nil, NewHttpError(err, http.StatusInternalServerError)
+		return nil, wtypes.NewHttpError(err, http.StatusInternalServerError)
 	}
 	if len(media) == 0 {
-		return nil, NewHttpError(fmt.Errorf("media (%s) not found", id), http.StatusNotFound)
+		return nil, wtypes.NewHttpError(fmt.Errorf("media (%s) not found", id), http.StatusNotFound)
 	}
 	return media[0], nil
 }
